syntax = "proto3";
package com.shieldblaze.expressgateway.controlinterface.loadbalancer;

message LoadBalancerResponse {
  string responseText = 1;
}

message StopLoadBalancer {
  string id = 1;
}

message GetLoadBalancerRequest {
  string loadBalancerId = 1;
}

// ------------------------ TCP ------------------------

message TCPLoadBalancer {
   string name = 1;
   string bindAddress = 2;
   int32 bindPort = 3;
   string profileName = 4;
   string tlsPassword = 5;
   bool tlsForServer = 6;
   bool tlsForClient = 7;
   string strategy = 8;
   string sessionPersistence = 9;
}

service TCPLoadBalancerService {
  rpc start(TCPLoadBalancer) returns (LoadBalancerResponse);
  rpc get(GetLoadBalancerRequest) returns (TCPLoadBalancer);
  rpc stop(StopLoadBalancer) returns (LoadBalancerResponse);
}

// ------------------------ UDP ------------------------

message UDPLoadBalancer {
  string name = 1;
  string bindAddress = 2;
  int32 bindPort = 3;
  string strategy = 4;
  string sessionPersistence = 5;
  string profileName = 6;
}

service UDPLoadBalancerService {
  rpc start(UDPLoadBalancer) returns (LoadBalancerResponse);
  rpc get(GetLoadBalancerRequest) returns (UDPLoadBalancer);
  rpc stop(StopLoadBalancer) returns (LoadBalancerResponse);
}
